# opt-engine

./: LICENSE  README.md
decomposer/: decomposition_strategies_enhanced.py  smart_decomposer_enhanced.py  task_analysis_config_enhanced.py
lock-freebuffer/: concept.txt  lockfree_ringbuffer.c  multibuffer_client_example.txt  optimized_multi_buffer.c  usage.txt
models/fine-tuning/: amd_optimization.py  phi2_teacher_trainer.py  training_data.jsonl  training_data.txt
models/fine-tuning/v1/: codet5_teacher_trainer.py  data_collector.py  data_config.py  data_types.py  dataset_builder.py  generators.py
models/fine-tuning/v1/data/: category_breakdown_1758113558.json  category_breakdown_1758116562.json  dataset_statistics_1758113558.json  dataset_statistics_1758116562.json  docs_raw.json  network_programming_dataset_1758112355.json  network_programming_dataset_1758113558.json  network_programming_dataset_1758116562.json
models/training/: compression.py  count_params.py  data_collector.py  data_generator.py  data_preprocessing.py  evaluation.py  graph TD.mermaid  memory_management.py  model_config.py  tokenizer_training.py  training_pipeline.py
models/training/v1/: data_collector.py  dataset_builder.py  optimized_network_tokenizer.py  pyproject.toml  tokenizer_training.py  training_pipeline.py
models/training/v1/data/: collected_raw_data.json  scrapfile.txt  synfile.txt
models/training/v1/network_tokenizer/: tokenizer.json  tokenizer_config.json
tests/buffer/: ring_buffer_integration.py
tests/decomposer/: decomposer_usage_example.py
(+11 files in other folders)
